clusters/colima/infrastructure/weave-gitops.yaml
---
# Source: weave-gitops/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  ingress:
  - ports:
    - port: 9001
      protocol: TCP
  policyTypes:
  - Ingress
---
# Source: weave-gitops/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  egress:
    - {}
  policyTypes:
  - Egress
---
# Source: weave-gitops/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weave-gitops
  labels:
    helm.sh/chart: weave-gitops-4.0.36
    app.kubernetes.io/name: weave-gitops
    app.kubernetes.io/instance: weave-gitops
    app.kubernetes.io/version: "v0.38.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: NodePort
  ports:
    - port: 9001
      targetPort: http
      nodePort: 30080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: weave-gitops
    app.kubernetes.io/instance: weave-gitops
---
# Source: weave-gitops/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-gitops
  labels:
    helm.sh/chart: weave-gitops-4.0.36
    app.kubernetes.io/name: weave-gitops
    app.kubernetes.io/instance: weave-gitops
    app.kubernetes.io/version: "v0.38.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: weave-gitops
    weave.works/app: weave-gitops-oss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: weave-gitops
      app.kubernetes.io/instance: weave-gitops
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weave-gitops
        app.kubernetes.io/instance: weave-gitops
        app.kubernetes.io/part-of: weave-gitops
        weave.works/app: weave-gitops-oss
    spec:
      serviceAccountName: weave-gitops
      containers:
        - name: weave-gitops
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/weaveworks/wego-app:v0.38.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--log-level"
            - "info"
            - "--insecure"
          ports:
            - name: http
              containerPort: 9001
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
